I think e-xx makes problems, avoid mult. e-12 in the tmpl

--- a/code/tmpl/optLinac_40nC.tmpl
+++ b/code/tmpl/optLinac_40nC.tmpl
@@ -236,7 +236,7 @@ Dist: DISTRIBUTION, TYPE = FLATTOP,
 		SIGMAY = _SIGXY_, 		
 		TRISE = 1.0745e-12,	// (s)
 		TFALL = 1.0745e-12,	// See notes above for equation of TRISE 
-		TPULSEFWHM = _FWHM_e-12,	// FWHM length in time (s)
+		TPULSEFWHM = _FWHM_,	// FWHM length in time (s)
 		CUTOFFLONG = 4.0,
 		NBIN = 9,
 		EMISSIONSTEPS = 100,
